--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -28,7 +28,7 @@ jobs:
             docker stop etherbeam_database || true && docker rm etherbeam_database || true
             cd ${{ env.SERVER_APP_PATH }}
             docker-compose -f docker-compose.production.yml up -d
-            sleep 30s
+            sleep 1m
             cd ${{ env.APP_PATH }}
             docker-compose -f docker-compose.production.yml up -d
 
