--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
   },
   "eslint.format.enable": true,
   "eslint.packageManager": "yarn",
-  "eslint.validate": ["markdown", "typescript"]
+  "eslint.validate": ["markdown", "typescript"],
+  "eslint.options": {
+    "extensions": [".js", ".jsx", ".md", ".mdx", ".ts", ".tsx"]
+  }
 }
