Update build deployment

--- a/.github/workflows/deploy-build.yml
+++ b/.github/workflows/deploy-build.yml
@@ -51,3 +51,4 @@ jobs:
           script: |
             cd ${{ env.APP_PATH }}
             docker-compose -f docker-compose.production.yml build eth-server
+            docker image prune -af
